# DuckX

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.bat  buildDll.bat  duckx.cpp  duckx.hpp
.github/: FUNDING.yml
cmake/: googletest-download.cmake
docs/: conf.py  index.rst
handle/: handle.cpp  handle.hpp
include/: constants.hpp  document.hh  duckx.hh  duckx.hpp  duckxiterator.hpp  paragraph.hh  run.hh  table.hh
include/duckx/: document.hh  duckxiterator.hpp  paragraph.hh  run.hh  table.hh
samples/: my_test2.docx  sample1.cpp  sample2.cpp
src/: constants.hpp  document.cc  duckx.cpp  duckx.hpp  duckxiterator.hpp  paragraph.cc  run.cc  table.cc
test/: CMakeLists.txt  basic_tests.cpp  doctest.h  iterator_tests.cpp  sample.docx
